...
                    <subviews>
                        <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HiW-d6-AUq" userLabel="Tab Buttons">
                            <rect key="frame" x="0.0" y="195" width="550" height="38"/>
                            <subviews>
                                <button horizontalHuggingPriority="750" verticalHuggingPriority="750" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kyk-QN-AE9">
                                    <rect key="frame" x="0.0" y="0.0" width="96" height="38"/>
                                    <buttonCell key="cell" type="square" title="General" bezelStyle="shadowlessSquare" image="NSAdvanced" imagePosition="leading" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Tbm-ds-WlL">
                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                        <font key="font" metaFont="system"/>
                                    </buttonCell>
                                </button>
                                <button horizontalHuggingPriority="750" verticalHuggingPriority="750" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b2F-m0-aIW">
                                    <rect key="frame" x="96" y="0.0" width="95" height="38"/>
...
                                                        <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yBg-YU-u89">
                                                            <rect key="frame" x="154" y="61" width="18" height="18"/>
                                                            <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="sZE-63-pJL">
                                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility description="Launch at Login"/>
                                                            <connections>
                                                                <binding destination="-2" name="value" keyPath="self.launchAtLogin" id="mCC-ad-NbQ"/>
                                                            </connections>
                                                        </button>
                                                    </gridCell>
                                                    <gridCell row="bY5-OF-acl" column="4ur-bR-EOi" headOfMergedCell="IRh-oG-EVc" id="IRh-oG-EVc">
...
                                        <subviews>
                                            <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xNy-tY-FG8" userLabel="Help VStack">
                                                <rect key="frame" x="0.0" y="4" width="163" height="56"/>
                                                <subviews>
                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="D4Y-xJ-OZJ">
                                                        <rect key="frame" x="-7" y="29" width="150" height="32"/>
                                                        <buttonCell key="cell" type="push" title="Show tutorial again" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="dDk-s3-els">
                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                            <font key="font" metaFont="system"/>
                                                        </buttonCell>
                                                        <accessibility description="Show tutorial again"/>
                                                        <connections>
                                                            <action selector="showTutorial:" target="-2" id="8nG-vE-nmU"/>
...
                                <customView id="4vE-b6-xfr" userLabel="Spacer">
                                    <rect key="frame" x="72" y="0.0" width="180" height="16"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                </customView>
                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Spf-a6-7Zd">
                                    <rect key="frame" x="252" y="-1" width="298" height="17"/>
                                    <buttonCell key="cell" type="roundRect" title="Done" bezelStyle="roundedRect" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="tch-2Y-0P2">
                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                        <font key="font" metaFont="controlContent" size="11"/>
                                        <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                                    </buttonCell>
...
