...
                        </button>
                        <button verticalHuggingPriority="750" horizontalCompressionResistancePriority="150" verticalCompressionResistancePriority="150" translatesAutoresizingMaskIntoConstraints="NO" id="tkS-gq-Cbs" userLabel="Prefs Button">
                            <rect key="frame" x="520" y="14" width="14" height="14"/>
                            <constraints>
                                <constraint firstAttribute="width" secondItem="tkS-gq-Cbs" secondAttribute="height" multiplier="1:1" id="8lS-9s-VYO"/>
                            </constraints>
                            <buttonCell key="cell" type="smallSquare" title="Preferences" bezelStyle="smallSquare" image="NSAdvanced" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="69E-e8-wPO">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
                            </buttonCell>
                            <accessibility description="Preferences"/>
                            <connections>
                                <action selector="preferenceButtonPressed:" target="-2" id="8XC-SQ-bNP"/>
...
